git-svn-id: svn+ssh://suna.comp.nus.edu.sg/home/l/liangzk/svn/homepage@22 18d26ba8-54aa-11dd-842a-84a11ae96c9e

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <td>
         <h2>Zhenkai Liang</h2>
 	Assistant Professor<br>
+	Department of Computer Science<br>
 	School of Computing<br>
 	National Univeristy of Singapore<br>
         <p>
@@ -32,7 +33,7 @@
 	Singapore, 117590<br>
         Phone: +65-65161226<br>
         Email: 
-<a href="http://mailhide.recaptcha.net/d?k=0128BWSz9wFqPEXCT4NSdsqA==&amp;c=m3zKU7zkY4uvqvnMn28OgtARCaJDlbVJ-q8YgDuUH48=" onclick="window.open('http://mailhide.recaptcha.net/d?k=0128BWSz9wFqPEXCT4NSdsqA==&amp;c=m3zKU7zkY4uvqvnMn28OgtARCaJDlbVJ-q8YgDuUH48=', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">li........</a>@comp.nus.edu.sg</p>
+	<a href="http://mailhide.recaptcha.net/d?k=0128BWSz9wFqPEXCT4NSdsqA==&amp;c=m3zKU7zkY4uvqvnMn28OgtARCaJDlbVJ-q8YgDuUH48=" onclick="window.open('http://mailhide.recaptcha.net/d?k=0128BWSz9wFqPEXCT4NSdsqA==&amp;c=m3zKU7zkY4uvqvnMn28OgtARCaJDlbVJ-q8YgDuUH48=', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">Click to Reveal</a></p> 
       </td>
     </tr>
   </table>
@@ -40,13 +41,18 @@
   <p>My personal website is <a href=
   "http://www.seclab.cs.stonybrook.edu/~zliang/personal">here</a>.</p>
 
-  <h2><a name="RESEARCH" id="RESEARCH">Research
-  Interests</a></h2>My research interests include program analysis, 
+  <h2>Research Interests</h2>
+  My research interests include program analysis, 
   software error detection and analysis, computer systems, software
   engineering, and compiler techniques. 
 
-  <h2><a name="PUBLICATIONS" id=
-  "PUBLICATIONS">Publications</a></h2>
+  <h2>Teaching</h2>
+  <ul>
+    <li>AY 2008/2009 Semester 1: <a href="">CS3235 Introduction to
+    Computer Security</a></li> 
+  </ul>
+
+  <h2>Publications</h2>
 
   <h3>Book Chapters</h3>
 
@@ -54,7 +60,7 @@
     <li><b>Automatically Identifying Trigger-based Behavior in
     Malware.</b> [<a href="papers/botnet08.pdf">PDF</a>]<br>
     David Brumley, Cody Hartwig, Zhenkai Liang, James Newsome,
-    Pongsin Poo\-sankam, Dawn Song, and Heng Yin.<br>
+    Pongsin Poosankam, Dawn Song, and Heng Yin.<br>
     In <i>Botnet Analysis and Defense</i>, vol. 36 of Advances in
     Information Security Series, Wenke Lee, Cliff Wang, and David
     Dagon (editors), pp. 65-88, Springer, 2008.</li>
@@ -151,61 +157,20 @@
     (LISA)</i>, Philadelphia, PA, November 2002.</li>
   </ol>
 
-  <h2><a name="SECTION00004000000000000000" id=
-  "SECTION00004000000000000000">Selected Talks</a></h2>
+
+  <h2>Links</h2>
 
   <ul>
-    <li><b>Towards Automatic Discovery of Deviations in Binary
-    Implementations with Applications to Error Detection and
-    Fingerprint Generation</b>. <b>(Best paper award)</b> <i>16th
-    USENIX Security Symposium</i>, August 2007.</li>
-
-    <li><b>Automatic Generation of Buffer Overflow Attack
-    Signatures: An Approach Based on Program Behavior Models</b>.
-    <i>21st Annual Computer Security Applications Conference
-    (ACSAC)</i>, December 2005.</li>
-
-    <li><b>Fast and Automated Generation of Attack Signatures: A
-    Basis for Building Self-Protecting Servers</b>. <i>12th ACM
-    Conference on Computer and Communications Security (CCS)</i>,
-    November 2005.</li>
-
-    <li><b>Automatic Signature Generation Against Large-scale
-    Attacks</b>. <i>Invited Talk, Network Security Lab, Columbia
-    University</i>, July 2005.</li>
-
-    <li><b>Automatic Synthesis of Filters to Discard Buffer
-    Overflow Attacks: A Step Towards Realizing Self-Healing
-    Systems</b>. <i>USENIX Annual Technical Conference</i>, April
-    2005.</li>
-
-    <li><b>An Adaptive Approach to Transparently Stop Buffer
-    Overflow Attacks</b>. <i>Graduate Research Conference,
-    Department of Computer Science, Stony Brook University</i>, May
-    2004.</li>
-
-    <li><b>Isolated Program Execution: An Application Transparent
-    Approach for Executing Untrusted Programs</b>. <b>(Best paper
-    award)</b> <i>19th Annual Computer Security Applications
-    Conference (ACSAC)</i>, December 2003.</li>
-
-    <li><b>Defending Against Stack Smashing Attacks</b>. <i>Stony
-    Brook CS Security Seminar</i>, April 2002.</li>
-  </ul>
-
-  <h2><a name="SECTION00005000000000000000" id=
-  "SECTION00005000000000000000">Links</a></h2>
-
-  <ul>
+    <li><a href="talks.html">Selected Talks</a></li>
     <li><a href=
     "http://myweb2.search.yahoo.com/myweb?friendid=pRp.KvRLMeZAefV3vdc-">
     A collection</a> of web pages that I found useful.</li>
 
   </ul>
 
-  <h2><a name="SECTION00006000000000000000" id=
-  "SECTION00006000000000000000">Contact
-  Information</a></h2><a name="tex2html23" href=
+  <h2>Contact Information</a></h2>
+
+  <a name="tex2html23" href=
   "zliang-gpg-pub.asc" id="tex2html23">Here</a> is my <a name=
   "tex2html24" href="http://www.gnupg.org" id=
   "tex2html24">GnuPG</a> public key signed by <a name="tex2html25"
@@ -224,7 +189,7 @@
   <hr>
 
   <address>
-    Last update, 13 June 2008.
+    Last update, 10 August 2008.
   </address>
 </body>
 </html>
