git-svn-id: svn+ssh://suna.comp.nus.edu.sg/home/l/liangzk/svn/homepage@300 18d26ba8-54aa-11dd-842a-84a11ae96c9e

--- a/talks.html
+++ b/talks.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html><head><title>Talks</title>
 
-<html>
-<head>
-  <title>Talks</title>
+
+
+  
   <meta http-equiv="Content-Style-Type" content="text/css">
-  <link rel="STYLESHEET" href="index.css" type="text/css">
-</head>
-
-<body style="font-family: sans-serif;">
+  <link rel="STYLESHEET" href="index.css" type="text/css"></head><body style="font-family: sans-serif;">
   <ul>
-    <li><b>Automated Software-Error Detection by Finding Deviations in
+    
+  <li><b>Automated Software-Error Detection by Finding Deviations in
+    Binaries</b>. Singapore Management University, September 2008.</li>
+<li><b>Automated Software-Error Detection by Finding Deviations in
     Binaries</b>. Nankai University, June 2008.</li>
 
     <li><b>Automated Software-Error Detection by Finding Deviations in
@@ -28,28 +29,7 @@
     Binaries</b>. George Mason University, May 2008.</li>
 
     <li><b>Automated Software-Error Detection by Finding Deviations in
-    Binaries</b>. Institute for Infocomm Research, April 2008.</li>
-
-    <li><b>Automated Software-Error Detection by Finding Deviations in
-    Binaries</b>. National University of Singapore, April 2008.</li>
-
-    <li><b>Automated Software-Error Detection by Finding Deviations in
-    Binaries</b>. Chinese University of Hong Kong, March 2008.</li>
-
-    <li><b>Automated Software-Error Detection by Finding Deviations in
-    Binaries</b>. Case Western Reserve University, March 2008.</li>
-
-    <li><b>Automated Software-Error Detection by Finding Deviations in
-    Binaries</b>. George Washington University, March 2008.</li>
-
-    <li><b>Automated Software-Error Detection by Finding Deviations in
-    Binaries</b>. Texas A&M University, March 2008.</li>
-
-    <li><b>Automated Software-Error Detection by Finding Deviations in
-    Binaries</b>. North Carolina State University, February 2008.</li>
-
-    <li><b>Automated Software-Error Detection by Finding Deviations in
-    Binaries</b>. Iowa State University, February 2008.</li>
+    Binaries</b>. Institute for Infocomm Research, April 2008.</li><li>Interview talk, Iowa State University, North Carolina State University, Texas A&amp;M University, George Washington University, Case Western Reserve University, Chinese University of Hong Kong, National University of Singapore, February - April 2008.</li>
 
     <li><b>Towards Automatic Discovery of Deviations in Binary
     Implementations with Applications to Error Detection and
@@ -88,5 +68,4 @@
     <li><b>Defending Against Stack Smashing Attacks</b>. <i>Stony
     Brook CS Security Seminar</i>, April 2002.</li>
   </ul>
-</body>
-</html>
+</body></html>
