--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@ software engineering, and compiler techniques.
 <h2>Teaching</h2>
 <ul>
   <li>AY 2008/2009 Semester 1: <a
- href="http://comp.nus.edu.sg/%7Ecs3235">CS3235 Introduction to
+ href="http://www.comp.nus.edu.sg/%7Ecs3235">CS3235 Introduction to
 Computer Security</a></li>
   <li>AY 2008/2009 Semester 2: <a
- href="http://comp.nus.edu.sg/%7Ecs6230">CS6230 Topics in Information
+ href="http://www.comp.nus.edu.sg/%7Ecs6230">CS6230 Topics in
+Information
 Security</a></li>
 </ul>
 <h2>Publications</h2>
