--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-  <title>Zhenkai Liang's Homepage</title>
+  <meta http-equiv="content-type"
+ content="text/html; charset=ISO-8859-1">
+  <title>Liang Zhenkai's Homepage</title>
   <meta name="description" content="Zhenkai Liang">
   <meta name="keywords" content="index">
   <meta name="resource-type" content="document">
@@ -13,7 +15,7 @@
 <table>
   <tbody>
     <tr>
-      <td><img src="zliang.jpg" width="200"></td>
+      <td><img src="zliang.jpg" width="300"></td>
       <td width="10"><br>
       </td>
       <td>
@@ -22,14 +24,19 @@
 Assistant Professor<br>
 Department of Computer Science<br>
 School of Computing<br>
-National Univeristy of Singapore<br>
-      <p> Computing 1, #03-68, Computing Drive<br>
-Singapore, 117590<br>
-Phone: +65-65161226<br>
+National University of Singapore<br>
+      <p> Mailing address:<br>
+13 Computing Drive<br>
+Computing 1, #03-68<br>
+Singapore, 117417<br>
+      <br>
+Phone: (+65) 6516 1226<br>
 Email: <a
  href="http://mailhide.recaptcha.net/d?k=0128BWSz9wFqPEXCT4NSdsqA==&amp;c=m3zKU7zkY4uvqvnMn28OgtARCaJDlbVJ-q8YgDuUH48="
- onclick="window.open('http://mailhide.recaptcha.net/d?k=0128BWSz9wFqPEXCT4NSdsqA==&c=m3zKU7zkY4uvqvnMn28OgtARCaJDlbVJ-q8YgDuUH48=', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;"
- title="Reveal this e-mail address">Click to Reveal</a></p>
+ onclick="window.open('http://mailhide.recaptcha.net/d?k=0128BWSz9wFqPEXCT4NSdsqA==&amp;c=m3zKU7zkY4uvqvnMn28OgtARCaJDlbVJ-q8YgDuUH48=', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;"
+ title="Reveal this e-mail address">Click to Reveal</a><br>
+Office: COM1 #03-16<br>
+      </p>
       </td>
     </tr>
   </tbody>
@@ -38,18 +45,25 @@ Email: <a
   <p>My personal website is <a href="http://www.seclab.cs.stonybrook.edu/%7Ezliang/personal">here</a>.</p>
   -->
 <h2>Research Interests</h2>
-My research interests include web application security, program
-analysis, software error detection and analysis, computer systems,
-software engineering, and compiler techniques.
+My research interests include system and software security, web
+security, program
+analysis,&nbsp;
+and software engineering.
 <h2>Teaching</h2>
 <ul>
-  <li>AY 2008/2009 Semester 1: <a
- href="http://www.comp.nus.edu.sg/%7Ecs3235">CS3235 Introduction to
-Computer Security</a></li>
-  <li>AY 2008/2009 Semester 2: <a
- href="http://www.comp.nus.edu.sg/%7Ecs6230">CS6230 Topics in
+  <li>AY 2008/2009 Semester 1: CS3235 Introduction to
+Computer Security</li>
+  <li>AY 2008/2009 Semester 2: CS6230 Topics in
 Information
-Security</a></li>
+Security</li>
+  <li>AY 2009/2010 Semester 1: CS5231 Cryptographic Techniques &amp;
+Data Security</li>
+  <li>AY 2009/2010 Semester 2: CS3235 Introduction to Computer Security<br>
+  </li>
+  <li>AY 2010/2011 Semester 1: CS5231 Systems Security<br>
+  </li>
+  <li><span style="color: rgb(0, 0, 0);">AY 2010/2011 Semester 2:
+CS3235 Introduction to Computer Security</span></li>
 </ul>
 <h2>Publications</h2>
 <h3>Book Chapters</h3>
@@ -64,18 +78,104 @@ Information Security Series, Wenke Lee, Cliff Wang, and David Dagon
 </ol>
 <h3>Journals</h3>
 <ol>
+  <li><span style="font-weight: bold;">DARWIN: An Approach for
+Debugging Evolving Programs.<br>
+    </span>Dawei Qi, Abhik Roychoudhury, Zhenkai Liang, and Kapil
+Vaswani.<br>
+To appear in <span style="font-style: italic;">ACM Transactions on
+Software Engineering and Methodology (TOSEM), 2011.</span></li>
   <li><b>Alcatraz: An Isolated Environment for Experimenting with
 Untrusted Software</b>. [<a href="papers/tissec09.pdf">PDF</a>]<br>
 Zhenkai Liang, Weiqing Sun, R.Sekar, and V.N. Venkatakrishnan.<br>
-    <span style="font-style: italic;">To appear in ACM Transactions on
-Information and System Security (TISSEC)</span><br>
-  </li>
+In <span style="font-style: italic;">ACM Transactions on
+Information and System Security (TISSEC), </span>Volume 12, Issue 3,
+January 2009.&nbsp; </li>
 </ol>
 <h3>Conferences</h3>
 <ol>
+  <li><span style="font-weight: bold;">Towards Fine-Grained Access
+Control in JavaScript Contexts.<br>
+    </span>Kailas Patil, Xinshu Dong, Xiaolei Li, Zhenkai Liang, and
+Xuxian Jiang.<br>
+To appear in 31st IEEE International Conference on Distributed Computing<br>
+Systems (ICDCS), Minneapolis, MN, June 2011.</li>
+  <li><span style="font-weight: bold;">Jump-Oriented Programming: A New
+Class of Code-Reuse Attack.<br>
+    </span><span class="Apple-style-span"
+ style="border-collapse: separate; color: rgb(0, 0, 0); font-family: Serif; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; font-size: medium;">Tyler
+Bletsch, Xuxian Jiang, Vince Freeh, and Zhenkai Liang.<br>
+    </span><span class="Apple-style-span"
+ style="border-collapse: separate; color: rgb(0, 0, 0); font-family: Serif; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; font-size: medium;">6th
+ACM Symposium on Information, Computer and Communications Security
+(ASIACCS), Hong Kong, China, March 2011</span>.</li>
+  <li><span style="font-weight: bold;">Heap Taichi: Exploiting Memory
+Allocation Granularity In Heap-spraying Attacks. </span>[<a
+ href="papers/acsac10.pdf">PDF</a>]<br>
+Yu Ding, Tao Wei, Tielei Wang, Zhenkai Liang, and Wei Zou.<br>
+25st Annual Computer Security Applications Conference (ACSAC), Austin,
+TX, December 2010.<br>
+  </li>
+  <li><span style="font-weight: bold;">Golden Implementation Driven
+Software Debugging. </span>[<a href="papers/fse10.pdf">PDF</a>]<br>
+Ansuman Banerjee, Abhik Roychoudhury, Johannes A. Harlie, and Zhenkai
+Liang.<br>
+ACM SIGSOFT 18th International Symposium on Foundations of Software
+Engineering (FSE), Sata Fe, NM, November 2010.<br>
+  </li>
+  <li> <span style="font-weight: bold;">Test Generation to Expose
+Changes in Evolving Programs. <span style="font-weight: bold;"><span
+ style="font-weight: bold;"></span></span></span>[<a
+ href="papers/ase10.pdf">PDF</a>]<br>
+Dawei Qi, Abhik Roychoudhury, and Zhenkai Liang.<br>
+25th IEEE/ACM International Conference on Automated Software
+Engineering (ASE), September 2010.<br>
+  </li>
+  <li><span style="font-weight: bold;">Transparent Protection of
+Commodity OS Kernels using Hardware Virtualization. </span>[<a
+ href="papers/securecomm10.pdf">PDF</a>]<br>
+Michael Grace, Zhi Wang, Deepa Srinivasan, Jinku Li, Xuxian Jiang,
+Zhenkai Liang, and Siarhei Liakh.<br>
+6th International ICST Conference on Security and Privacy in
+Communication Networks (SecureComm), Singapore, September 2010. <br>
+  </li>
+  <li><font color="#800000"><font color="#000000"><strong>Towards
+Generating High Coverage Vulnerability-Based Signatures with
+Protocol-Level Constraint-Guided Exploration. </strong></font></font>[<a
+ href="papers/raid09.pdf">PDF</a>]<br>
+    <font color="#800000"><font color="#000000">Juan Caballero, Zhenkai
+Liang, Pongsin Poosankam, and Dawn Song.<br>
+    </font></font><font color="#800000"><font color="#000000">12th
+International Symposium on Recent Advances in Intrusion Detection<span
+ class="booktitle"> (RAID), Saint-Malo</span>, France, September 2009.</font></font><br>
+  </li>
+  <li><span style="font-weight: bold;">DARWIN: An Approach for
+Debugging Evolving Programs. </span><font color="#800000"><font
+ color="#000000"><strong></strong></font></font>[<a
+ href="papers/fse09.pdf">PDF</a>]<br>
+    <b style="color: rgb(255, 0, 0);">(Distinguished
+paper award)<br>
+    </b>Dawei Qi,
+Abhik Roychoudhury,
+Zhenkai Liang,
+Kapil Vaswani.<br>
+ESEC and ACM SIGSOFT Symposium on the Foundations of Software
+Engineering (FSE), ESEC-FSE, Amsterdam, the Netherlands, August 2009.
+(Acceptance rate:
+14.7%) </li>
+  <li><strong><font color="#000000">BitBlaze: A New Approach to
+Computer Security via Binary Analysis. </font></strong>[<a
+ href="papers/iciss08.pdf">PDF</a>] (*Invited keynote paper)<br>
+    <font color="#000000">Dawn Song,&nbsp;David Brumley,&nbsp;Heng
+Yin,&nbsp;Juan Caballero,&nbsp;Ivan Jager,&nbsp;Min Gyung
+Kang,&nbsp;Zhenkai Liang, James Newsome, Pongsin Poosankam, and Prateek
+Saxena.<br>
+    </font><font color="#000000">4th International Conference on
+Information Systems Security<span class="booktitle"> (ICISS),
+Hyderabad, India</span>, December 2008. </font><br>
+  </li>
   <li><b>Expanding Malware Defense by Securing Software Installations</b>.
 [<a href="papers/dimva08.pdf">PDF</a>]<br>
-Weiqing Sun, R. Sekar, Zhenkai Liang, and V.N. Venkatakrishnan,<br>
+Weiqing Sun, R. Sekar, Zhenkai Liang, and V.N. Venkatakrishnan.<br>
 In <i>Detection of Intrusions, Malware and Vulnerability Analysis
 (DIMVA)</i>, Paris, France, July 2008.</li>
   <li><span style="font-weight: bold;">AGIS: Automatic Generation of
@@ -99,27 +199,30 @@ Juan Caballero, Heng Yin, Zhenkai Liang, and Dawn Dong.<br>
 (CCS)</i>, Alexandria, VA, October 2007. (Acceptance rate: 18%)</li>
   <li><b>Towards Automatic Discovery of Deviations in Binary
 Implementations with Applications to Error Detection and Fingerprint
-Generation</b>. [<a href="papers/sec07.pdf">PDF</a>][<a
- href="papers/sec07.ppt">Talk</a>]<br>
-    <a href="http://www.usenix.org/events/sec07/tech/brumley.html"><b>(Best
-paper award)</b></a><br>
+Generation</b>. [<a href="papers/sec07.pdf">PDF</a>]<br>
+    <b style="color: rgb(255, 0, 0);">(Best
+paper award)</b><br>
 David Brumley, Juan Caballero, Zhenkai Liang, James Newsome, and Dawn
 Song.<br>
     <i>the 16th USENIX Security Symposium</i>, Boston, MA, August 2007.
 (Acceptance rate: 12.3%)</li>
   <li><b>Automatic Generation of Buffer Overflow Attack Signatures: An
-Approach Based on Program Behavior Models</b>. [<a name="tex2html12"
- href="papers/acsac05.pdf" id="tex2html12">PDF</a>][<a name="tex2html13"
- href="papers/acsac05.ppt" id="tex2html13">Talk</a>]<br>
+Approach Based on Program Behavior Models</b>. [<a
+ href="papers/acsac05.pdf">PDF</a>]<br>
 Zhenkai Liang and R. Sekar.<br>
     <i>21st Annual Computer Security Applications Conference (ACSAC)</i>,
-Tucson, AZ, December 2005. (Acceptance rate: 19.6%)</li>
+Tucson,
+AZ,
+December
+2005. (Acceptance rate: 19.6%)</li>
   <li><b>Fast and Automated Generation of Attack Signatures: A Basis
-for Building Self-Protecting Servers</b>. [<a href="papers/ccs05.pdf">PDF</a>][<a
- href="papers/ccs05.ppt">Talk</a>]<br>
+for Building Self-Protecting Servers</b>. [<a href="papers/ccs05.pdf">PDF</a>]<br>
 Zhenkai Liang and R. Sekar.<br>
     <i>12th ACM Conference on Computer and Communications Security (CCS)</i>,
-Alexandria, VA, November 2005. (Acceptance rate: 15.2%)</li>
+Alexandria,
+VA,
+November
+2005. (Acceptance rate: 15.2%)</li>
   <li><b>Automatic Synthesis of Filters to Discard Buffer Overflow
 Attacks: A Step Towards Realizing Self-Healing Systems</b>. [<a
  href="papers/usenix05.pdf">PDF</a>]<br>
@@ -133,30 +236,29 @@ Weiqing Sun, Zhenkai Liang, R.Sekar, and V.N. Venkatakrishnan.<br>
 (NDSS)</i>, San Diego, CA, February 2005. (Acceptance rate: 13%)</li>
   <li><b>Isolated Program Execution: An Application Transparent
 Approach for Executing Untrusted Programs</b>. [<a
- href="papers/acsac03.pdf">PDF</a>][<a href="papers/acsac03.ppt">Talk</a>]<br>
-    <a href="http://www.acsa-admin.org/2003/bestpaper.html"><b>(Best
-paper award)</b></a><br>
+ href="papers/acsac03.pdf">PDF</a>]<br>
+    <b style="color: rgb(255, 0, 0);">(Outstanding
+paper award)</b><br>
 Zhenkai Liang, V.N. Venkatakrishnan, and R. Sekar.<br>
     <i>19th Annual Computer Security Applications Conference (ACSAC)</i>,
-Las Vegas, NV, December 2003.</li>
+Las
+Vegas,
+NV,
+December 2003.</li>
   <li><b>An approach for Secure Software Installation</b>. [<a
  href="papers/lisa02.pdf">PDF</a>]<br>
 V.N. Venkatakrishnan, R. Sekar, S. Tsipa, T. Kamat, and Z. Liang.<br>
     <i>16th Large Installation System Administration Conference (LISA)</i>,
-Philadelphia, PA, November 2002.</li>
+Philadelphia,
+PA,
+November
+2002.</li>
 </ol>
-<h2>Links</h2>
-<ul>
-  <li><a href="talks.html">Selected Talks</a></li>
-  <li><a
- href="http://myweb2.search.yahoo.com/myweb?friendid=pRp.KvRLMeZAefV3vdc-">A
-collection</a> of web pages that I found useful.</li>
-</ul>
 <h2>Contact Information</h2>
 <a href="zliang-gpg-pub.asc">Here</a>
 is my <a href="http://www.gnupg.org">GnuPG</a>
 public key signed by <a href="http://www.cacert.org">CACert.org</a>
-(I'm an assurer of CACert).<br>
+<br>
 <b>Key ID</b>: 0xB98FE3FADBC5E7A8<br>
 <b>Fingerprint</b>: 9515 1EE2 0B27 0954 D4F9 0EDC B98F E3FA DBC5 E7A8<br>
 <br>
@@ -165,6 +267,15 @@ public key signed by <a href="http://www.cacert.org">CACert.org</a>
 <p><br>
 </p>
 <hr>
-<address> Last update, 05 January 2009. </address>
+<address> Last update, 24 February 2011. </address>
+<!--  LocalWords:  Liang Zhenkai's Zhenkai AY Malware PDF Brumley Hartwig Heng
+ -->
+<!--  LocalWords:  Newsome Pongsin Poosankam Botnet Wenke Dagon Weiqing Sekar
+ --><!--  LocalWords:  Venkatakrishnan ACM TISSEC th Malo Dawei Qi Abhik Kapil ESEC
+ --><!--  LocalWords:  Roychoudhury Vaswani SIGSOFT FSE BitBlaze Jager Gyung Kang
+ --><!--  LocalWords:  Prateek Saxena ICISS DIMVA AGIS Zhuowei Xiaofeng Reiter IEEE
+ --><!--  LocalWords:  IFIP DSN HookFinder NDSS CCS USENIX ACSAC DuVarney Las Tsipa
+ --><!--  LocalWords:  Kamat GnuPG CACert assurer xB FADBC EE EDC DBC
+ -->
 </body>
 </html>
