git-svn-id: svn+ssh://suna.comp.nus.edu.sg/home/l/liangzk/svn/homepage@389 18d26ba8-54aa-11dd-842a-84a11ae96c9e

--- a/index.html
+++ b/index.html
@@ -62,8 +62,10 @@ Data Security</li>
   </li>
   <li>AY 2010/2011 Semester 1: CS5231 Systems Security<br>
   </li>
-  <li><span style="color: rgb(0, 0, 0);">AY 2010/2011 Semester 2:
-CS3235 Introduction to Computer Security</span></li>
+  <li>AY 2010/2011 Semester 2: CS3235 Introduction to Computer Security<br>
+  </li>
+  <li>AY 2011/2012 Semester 1: CS4238 Computer Security Practice<br>
+  </li>
 </ul>
 <h2>Publications</h2>
 <h3>Book Chapters</h3>
@@ -93,26 +95,30 @@ January 2009.&nbsp; </li>
 </ol>
 <h3>Conferences</h3>
 <ol>
+  <li><span style="font-weight: bold;"><img src="newicon.gif"> Identifying and Analyzing Pointer Misuses for Sophisticated Memory-corruption Exploit Diagnosis.<br>
+    </span>Mingwei Zhang, Aravind Prakash, Xiaolei Li, Zhenkai Liang,
+  and Heng Yin.<br>
+To appear in the 19th Annual Network & Distributed System Security
+  Symposium (NDSS), San Diego, CA, February 2012.</li>
+  <li><span style="font-weight: bold;">AdSentry: Comprehensive and Flexible Confinement of JavaScript-based Advertisements.<br></span>
+  Xinshu Dong, Minh Tran, Zhenkai Liang, and Xuxian Jiang.<br>
+To appear in the 27th Annual Computer Security Applications Conference
+(ACSAC), Orlando, FL, December 2011.</li>
   <li><span style="font-weight: bold;">Towards Fine-Grained Access
 Control in JavaScript Contexts.<br>
     </span>Kailas Patil, Xinshu Dong, Xiaolei Li, Zhenkai Liang, and
 Xuxian Jiang.<br>
-To appear in 31st IEEE International Conference on Distributed Computing<br>
-Systems (ICDCS), Minneapolis, MN, June 2011.</li>
+31st IEEE International Conference on Distributed Computing Systems (ICDCS), Minneapolis, MN, June 2011.</li>
   <li><span style="font-weight: bold;">Jump-Oriented Programming: A New
-Class of Code-Reuse Attack.<br>
-    </span><span class="Apple-style-span"
- style="border-collapse: separate; color: rgb(0, 0, 0); font-family: Serif; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; font-size: medium;">Tyler
-Bletsch, Xuxian Jiang, Vince Freeh, and Zhenkai Liang.<br>
-    </span><span class="Apple-style-span"
- style="border-collapse: separate; color: rgb(0, 0, 0); font-family: Serif; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; font-size: medium;">6th
-ACM Symposium on Information, Computer and Communications Security
+Class of Code-Reuse Attack.<br></span>
+Tyler Bletsch, Xuxian Jiang, Vince Freeh, and Zhenkai Liang.<br>
+6th ACM Symposium on Information, Computer and Communications Security
 (ASIACCS), Hong Kong, China, March 2011</span>.</li>
   <li><span style="font-weight: bold;">Heap Taichi: Exploiting Memory
 Allocation Granularity In Heap-spraying Attacks. </span>[<a
  href="papers/acsac10.pdf">PDF</a>]<br>
 Yu Ding, Tao Wei, Tielei Wang, Zhenkai Liang, and Wei Zou.<br>
-25st Annual Computer Security Applications Conference (ACSAC), Austin,
+25th Annual Computer Security Applications Conference (ACSAC), Austin,
 TX, December 2010.<br>
   </li>
   <li><span style="font-weight: bold;">Golden Implementation Driven
@@ -267,7 +273,7 @@ public key signed by <a href="http://www.cacert.org">CACert.org</a>
 <p><br>
 </p>
 <hr>
-<address> Last update, 24 February 2011. </address>
+<address> Last update, 20 October 2011. </address>
 <!--  LocalWords:  Liang Zhenkai's Zhenkai AY Malware PDF Brumley Hartwig Heng
  -->
 <!--  LocalWords:  Newsome Pongsin Poosankam Botnet Wenke Dagon Weiqing Sekar
