--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <meta http-equiv="Content-Style-Type" content="text/css">
   <link rel="STYLESHEET" href="index.css" type="text/css">
 </head>
-<body style="font-family: sans-serif;">
+<body style="font-family: sans-serif; color: rgb(0, 0, 0);"
+ link="#0000ee" vlink="#551a8b" alink="#ee0000">
 <table>
   <tbody>
     <tr>
@@ -64,8 +65,8 @@ Data Security</li>
   </li>
   <li>AY 2010/2011 Semester 2: CS3235 Introduction to Computer Security<br>
   </li>
-  <li>AY 2011/2012 Semester 1: CS4238 Computer Security Practice<br>
-  </li>
+  <li>AY 2011/2012 Semester 1: CS4238 Computer Security Practice</li>
+  <li>AY 2011/2012 Semester 2: CS5231 Systems Security</li>
 </ul>
 <h2>Publications</h2>
 <h3>Book Chapters</h3>
@@ -85,7 +86,7 @@ Debugging Evolving Programs.<br>
     </span>Dawei Qi, Abhik Roychoudhury, Zhenkai Liang, and Kapil
 Vaswani.<br>
 To appear in <span style="font-style: italic;">ACM Transactions on
-Software Engineering and Methodology (TOSEM), 2011.</span></li>
+Software Engineering and Methodology (TOSEM), 2012.</span></li>
   <li><b>Alcatraz: An Isolated Environment for Experimenting with
 Untrusted Software</b>. [<a href="papers/tissec09.pdf">PDF</a>]<br>
 Zhenkai Liang, Weiqing Sun, R.Sekar, and V.N. Venkatakrishnan.<br>
@@ -95,54 +96,75 @@ January 2009.&nbsp; </li>
 </ol>
 <h3>Conferences</h3>
 <ol>
-  <li><span style="font-weight: bold;"><img src="newicon.gif"> Identifying and Analyzing Pointer Misuses for Sophisticated Memory-corruption Exploit Diagnosis.<br>
-    </span>Mingwei Zhang, Aravind Prakash, Xiaolei Li, Zhenkai Liang,
-  and Heng Yin.<br>
-To appear in the 19th Annual Network & Distributed System Security
-  Symposium (NDSS), San Diego, CA, February 2012.</li>
-  <li><span style="font-weight: bold;">AdSentry: Comprehensive and Flexible Confinement of JavaScript-based Advertisements.<br></span>
-  Xinshu Dong, Minh Tran, Zhenkai Liang, and Xuxian Jiang.<br>
-To appear in the 27th Annual Computer Security Applications Conference
-(ACSAC), Orlando, FL, December 2011.</li>
+  <li><img src="newicon.gif"><span style="font-weight: bold;">A
+Framework to Eliminate Backdoors from Response Computable
+Authentication.<br>
+    </span> Shuaifu Dai, Tao Wei, Chao Zhang, Tielei Wang, Yu Ding, Wei
+Zou, and Zhenkai Liang. <br>
+To appear in <span style="font-style: italic;">the IEEE Symposium on
+Security and Privacy</span>, San Francisco, CA, May 2012.<br>
+  </li>
+  <li><span style="font-weight: bold;">Identifying and Analyzing
+Pointer Misuses for Sophisticated Memory-corruption Exploit Diagnosis. </span>[<a
+ href="papers/ndss12.pdf">PDF</a>]<br>
+Mingwei Zhang, Aravind Prakash, Xiaolei Li, Zhenkai Liang,
+and Heng Yin.<br>
+In <span style="font-style: italic;">the 19th Annual Network &amp;
+Distributed System Security Symposium (NDSS)</span>, San Diego, CA,
+February 2012.</li>
+  <li><span style="font-weight: bold;">AdSentry: Comprehensive and
+Flexible Confinement of JavaScript-based Advertisements. </span>[<a
+ href="papers/acsac11.pdf">PDF</a>]<br>
+Xinshu Dong, Minh Tran, Zhenkai Liang, and Xuxian Jiang.<br>
+In <i>the 27th Annual Computer Security Applications Conference
+(ACSAC)</i>, Orlando, FL, December 2011.</li>
   <li><span style="font-weight: bold;">Towards Fine-Grained Access
-Control in JavaScript Contexts.<br>
-    </span>Kailas Patil, Xinshu Dong, Xiaolei Li, Zhenkai Liang, and
+Control in JavaScript Contexts. </span>[<a href="papers/icdcs11.pdf">PDF</a>]<br>
+Kailas Patil, Xinshu Dong, Xiaolei Li, Zhenkai Liang, and
 Xuxian Jiang.<br>
-31st IEEE International Conference on Distributed Computing Systems (ICDCS), Minneapolis, MN, June 2011.</li>
+In <i>the 31st IEEE International Conference on Distributed Computing
+Systems (ICDCS)</i>, Minneapolis, MN, June 2011.</li>
   <li><span style="font-weight: bold;">Jump-Oriented Programming: A New
-Class of Code-Reuse Attack.<br></span>
-Tyler Bletsch, Xuxian Jiang, Vince Freeh, and Zhenkai Liang.<br>
-6th ACM Symposium on Information, Computer and Communications Security
-(ASIACCS), Hong Kong, China, March 2011</span>.</li>
+Class of Code-Reuse Attack. <span style="font-weight: bold;"></span></span>[<a
+ href="papers/asiaccs11.pdf">PDF</a>]<span style="font-weight: bold;"><span
+ style="font-weight: bold;"></span><br>
+    </span>Tyler Bletsch, Xuxian Jiang, Vince Freeh, and Zhenkai Liang.<br>
+In <i>the 6th ACM Symposium on Information, Computer and
+Communications Security
+(ASIACCS)</i>, Hong Kong, China, March 2011.</li>
   <li><span style="font-weight: bold;">Heap Taichi: Exploiting Memory
 Allocation Granularity In Heap-spraying Attacks. </span>[<a
  href="papers/acsac10.pdf">PDF</a>]<br>
 Yu Ding, Tao Wei, Tielei Wang, Zhenkai Liang, and Wei Zou.<br>
-25th Annual Computer Security Applications Conference (ACSAC), Austin,
-TX, December 2010.<br>
+In <i>the 25th Annual Computer Security Applications Conference (ACSAC)</i>,
+Austin,
+TX,
+December
+2010.<br>
   </li>
   <li><span style="font-weight: bold;">Golden Implementation Driven
 Software Debugging. </span>[<a href="papers/fse10.pdf">PDF</a>]<br>
 Ansuman Banerjee, Abhik Roychoudhury, Johannes A. Harlie, and Zhenkai
 Liang.<br>
-ACM SIGSOFT 18th International Symposium on Foundations of Software
-Engineering (FSE), Sata Fe, NM, November 2010.<br>
+In <i>the ACM SIGSOFT 18th International Symposium on Foundations of
+Software
+Engineering (FSE)</i>, Sata Fe, NM, November 2010.<br>
   </li>
   <li> <span style="font-weight: bold;">Test Generation to Expose
 Changes in Evolving Programs. <span style="font-weight: bold;"><span
  style="font-weight: bold;"></span></span></span>[<a
  href="papers/ase10.pdf">PDF</a>]<br>
 Dawei Qi, Abhik Roychoudhury, and Zhenkai Liang.<br>
-25th IEEE/ACM International Conference on Automated Software
-Engineering (ASE), September 2010.<br>
+In <i>the 25th IEEE/ACM International Conference on Automated Software
+Engineering (ASE)</i>, September 2010.<br>
   </li>
   <li><span style="font-weight: bold;">Transparent Protection of
 Commodity OS Kernels using Hardware Virtualization. </span>[<a
  href="papers/securecomm10.pdf">PDF</a>]<br>
 Michael Grace, Zhi Wang, Deepa Srinivasan, Jinku Li, Xuxian Jiang,
 Zhenkai Liang, and Siarhei Liakh.<br>
-6th International ICST Conference on Security and Privacy in
-Communication Networks (SecureComm), Singapore, September 2010. <br>
+In <i>the 6th International ICST Conference on Security and Privacy in
+Communication Networks (SecureComm)</i>, Singapore, September 2010. <br>
   </li>
   <li><font color="#800000"><font color="#000000"><strong>Towards
 Generating High Coverage Vulnerability-Based Signatures with
@@ -150,9 +172,11 @@ Protocol-Level Constraint-Guided Exploration. </strong></font></font>[<a
  href="papers/raid09.pdf">PDF</a>]<br>
     <font color="#800000"><font color="#000000">Juan Caballero, Zhenkai
 Liang, Pongsin Poosankam, and Dawn Song.<br>
-    </font></font><font color="#800000"><font color="#000000">12th
-International Symposium on Recent Advances in Intrusion Detection<span
- class="booktitle"> (RAID), Saint-Malo</span>, France, September 2009.</font></font><br>
+    </font></font>In <i>the </i><font color="#800000"><font
+ color="#000000"><span style="font-style: italic;">12th
+International Symposium on Recent Advances in Intrusion Detection</span><span
+ class="booktitle"><span style="font-style: italic;"> (RAID)</span>,
+Saint-Malo</span>, France, September 2009.</font></font><br>
   </li>
   <li><span style="font-weight: bold;">DARWIN: An Approach for
 Debugging Evolving Programs. </span><font color="#800000"><font
@@ -164,8 +188,9 @@ paper award)<br>
 Abhik Roychoudhury,
 Zhenkai Liang,
 Kapil Vaswani.<br>
-ESEC and ACM SIGSOFT Symposium on the Foundations of Software
-Engineering (FSE), ESEC-FSE, Amsterdam, the Netherlands, August 2009.
+In <i>the ESEC and ACM SIGSOFT Symposium on the Foundations of
+Software
+Engineering (ESEC-FSE</i>), Amsterdam, the Netherlands, August 2009.
 (Acceptance rate:
 14.7%) </li>
   <li><strong><font color="#000000">BitBlaze: A New Approach to
@@ -175,33 +200,37 @@ Computer Security via Binary Analysis. </font></strong>[<a
 Yin,&nbsp;Juan Caballero,&nbsp;Ivan Jager,&nbsp;Min Gyung
 Kang,&nbsp;Zhenkai Liang, James Newsome, Pongsin Poosankam, and Prateek
 Saxena.<br>
-    </font><font color="#000000">4th International Conference on
+    </font>In <i>the </i><font color="#000000">4th International
+Conference on
 Information Systems Security<span class="booktitle"> (ICISS),
 Hyderabad, India</span>, December 2008. </font><br>
   </li>
   <li><b>Expanding Malware Defense by Securing Software Installations</b>.
 [<a href="papers/dimva08.pdf">PDF</a>]<br>
 Weiqing Sun, R. Sekar, Zhenkai Liang, and V.N. Venkatakrishnan.<br>
-In <i>Detection of Intrusions, Malware and Vulnerability Analysis
+In <span style="font-style: italic;">the </span><i>Detection of
+Intrusions, Malware and Vulnerability Analysis
 (DIMVA)</i>, Paris, France, July 2008.</li>
   <li><span style="font-weight: bold;">AGIS: Automatic Generation of
 Infection Signatures.</span> [<a href="papers/dsn08.pdf">PDF</a>]<br>
 Zhuowei. Li, Xiaofeng. Wang, Zhenkai Liang and Mike. K. Reiter. <br>
-    <span style="font-style: italic;">38th Annual IEEE/IFIP
+In <i>the </i><span style="font-style: italic;">38th Annual IEEE/IFIP
 International Conference on
 Dependable Systems and Networks (DSN), </span>Anchorage, AK, June
 2008.&nbsp;</li>
   <li><b>HookFinder: Identifying and Understanding Malware Hooking
 Behaviors</b>. [<a href="papers/ndss08.pdf">PDF</a>]<br>
 Heng Yin, Zhenkai Liang, and Dawn Song.<br>
-    <span style="font-style: italic;">1</span><i>5th Annual Network and
+In <i>the </i><span style="font-style: italic;">1</span><i>5th Annual
+Network and
 Distributed System Security
 Symposium (NDSS)</i>, San Diego, CA, February 2008. (Acceptance rate:
 17.8%)</li>
   <li><b>Polyglot: Automatic Extraction of Protocol Message Format
 using Dynamic Binary Analysis</b>. [<a href="papers/ccs07.pdf">PDF</a>]<br>
 Juan Caballero, Heng Yin, Zhenkai Liang, and Dawn Dong.<br>
-    <i>14th ACM Conference on Computer and Communications Security
+In <i>the </i><i>14th ACM Conference on Computer and Communications
+Security
 (CCS)</i>, Alexandria, VA, October 2007. (Acceptance rate: 18%)</li>
   <li><b>Towards Automatic Discovery of Deviations in Binary
 Implementations with Applications to Error Detection and Fingerprint
@@ -210,13 +239,14 @@ Generation</b>. [<a href="papers/sec07.pdf">PDF</a>]<br>
 paper award)</b><br>
 David Brumley, Juan Caballero, Zhenkai Liang, James Newsome, and Dawn
 Song.<br>
-    <i>the 16th USENIX Security Symposium</i>, Boston, MA, August 2007.
+In <i>the 16th USENIX Security Symposium</i>, Boston, MA, August 2007.
 (Acceptance rate: 12.3%)</li>
   <li><b>Automatic Generation of Buffer Overflow Attack Signatures: An
 Approach Based on Program Behavior Models</b>. [<a
  href="papers/acsac05.pdf">PDF</a>]<br>
 Zhenkai Liang and R. Sekar.<br>
-    <i>21st Annual Computer Security Applications Conference (ACSAC)</i>,
+In <i>the </i><i>21st Annual Computer Security Applications
+Conference (ACSAC)</i>,
 Tucson,
 AZ,
 December
@@ -224,7 +254,8 @@ December
   <li><b>Fast and Automated Generation of Attack Signatures: A Basis
 for Building Self-Protecting Servers</b>. [<a href="papers/ccs05.pdf">PDF</a>]<br>
 Zhenkai Liang and R. Sekar.<br>
-    <i>12th ACM Conference on Computer and Communications Security (CCS)</i>,
+In <i>the </i><i>12th ACM Conference on Computer and Communications
+Security (CCS)</i>,
 Alexandria,
 VA,
 November
@@ -233,12 +264,16 @@ November
 Attacks: A Step Towards Realizing Self-Healing Systems</b>. [<a
  href="papers/usenix05.pdf">PDF</a>]<br>
 Zhenkai Liang, R. Sekar, and Daniel C. DuVarney.<br>
-    <i>USENIX Annual Technical Conference (short paper)</i>, Anaheim,
-CA, April 2005.</li>
+In <i>the </i><i>USENIX Annual Technical Conference (short paper)</i>,
+Anaheim,
+CA,
+April
+2005.</li>
   <li><b>One-way Isolation: An Effective Approach for Realizing Safe
 Execution Environments</b>. [<a href="papers/ndss05.pdf">PDF</a>]<br>
 Weiqing Sun, Zhenkai Liang, R.Sekar, and V.N. Venkatakrishnan.<br>
-    <i>12th Annual Network and Distributed System Security Symposium
+In <i>the </i><i>12th Annual Network and Distributed System Security
+Symposium
 (NDSS)</i>, San Diego, CA, February 2005. (Acceptance rate: 13%)</li>
   <li><b>Isolated Program Execution: An Application Transparent
 Approach for Executing Untrusted Programs</b>. [<a
@@ -246,15 +281,21 @@ Approach for Executing Untrusted Programs</b>. [<a
     <b style="color: rgb(255, 0, 0);">(Outstanding
 paper award)</b><br>
 Zhenkai Liang, V.N. Venkatakrishnan, and R. Sekar.<br>
-    <i>19th Annual Computer Security Applications Conference (ACSAC)</i>,
+In <i>the 19th Annual Computer Security Applications Conference (ACSAC)</i>,
 Las
 Vegas,
 NV,
-December 2003.</li>
+December
+2003.</li>
   <li><b>An approach for Secure Software Installation</b>. [<a
  href="papers/lisa02.pdf">PDF</a>]<br>
 V.N. Venkatakrishnan, R. Sekar, S. Tsipa, T. Kamat, and Z. Liang.<br>
-    <i>16th Large Installation System Administration Conference (LISA)</i>,
+In <span style="font-style: italic;">the </span><i><span
+ style="font-style: italic;"><span style="font-style: italic;"></span></span>16th
+Large
+Installation
+System
+Administration Conference (LISA)</i>,
 Philadelphia,
 PA,
 November
@@ -273,7 +314,7 @@ public key signed by <a href="http://www.cacert.org">CACert.org</a>
 <p><br>
 </p>
 <hr>
-<address> Last update, 20 October 2011. </address>
+<address> Last update, 21 March 2012. </address>
 <!--  LocalWords:  Liang Zhenkai's Zhenkai AY Malware PDF Brumley Hartwig Heng
  -->
 <!--  LocalWords:  Newsome Pongsin Poosankam Botnet Wenke Dagon Weiqing Sekar
