--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@ Information Security Series, Wenke Lee, Cliff Wang, and David Dagon
 Debugging Evolving Programs.<br>
     </span>Dawei Qi, Abhik Roychoudhury, Zhenkai Liang, and Kapil
 Vaswani.<br>
-To appear in <span style="font-style: italic;">ACM Transactions on
-Software Engineering and Methodology (TOSEM), 2012.</span></li>
+In <span style="font-style: italic;">ACM Transactions on
+Software Engineering and Methodology (TOSEM), Volume 21, Issue 3, 2012.</span></li>
   <li><b>Alcatraz: An Isolated Environment for Experimenting with
 Untrusted Software</b>. [<a href="papers/tissec09.pdf">PDF</a>]<br>
 Zhenkai Liang, Weiqing Sun, R.Sekar, and V.N. Venkatakrishnan.<br>
@@ -96,12 +96,40 @@ January 2009.&nbsp; </li>
 </ol>
 <h3>Conferences</h3>
 <ol>
-  <li><img src="newicon.gif"><span style="font-weight: bold;">A
+  <li><img src="newicon.gif"><span style="font-weight: bold;">
+An Empirical Study of Dangerous Behaviors in Firefox Extensions.<br>
+    </span>Jiangang
+Wang, Xiaohong Li, Xuhui Liu, Xinshu Dong, Junjie Wang, Zhenkai Liang,
+and Zhiyong Feng. <br>
+In <span style="font-style: italic;">the 15th Information Security Conference
+(ISC)</span>, Passau, Germany, September 2012.<br>
+  </li>
+
+  <li><img src="newicon.gif"><span style="font-weight: bold;">
+Codejail: Application-transparent Isolation of Libraries with Tight Program
+Interactions.<br>
+    </span> Yongzheng Wu, Sai Sathyanarayan, Roland Yap, and Zhenkai
+Liang. <br>
+In <span style="font-style: italic;">the 17th European Symposium on Research in Computer
+Security (ESORICS)</span>, Pisa, Italy, September 2012.<br>
+  </li>
+
+  <li><span style="font-weight: bold;">
+Tracking the Trackers: Fast and Scalable Dynamic Analysis of Web Content
+for Privacy Violations.
+    </span> [<a href="papers/acns12.pdf">PDF</a><br> Minh Tran, Xinshu Dong, Zhenkai Liang, and Xuxian
+Jiang. <br>
+In <span style="font-style: italic;">the 10th International Conference on Applied Cryptography
+and Network Security (ACNS)</span>, Singapore, June 2012.<br>
+  </li>
+
+  <li><span style="font-weight: bold;">A
 Framework to Eliminate Backdoors from Response Computable
-Authentication.<br>
-    </span> Shuaifu Dai, Tao Wei, Chao Zhang, Tielei Wang, Yu Ding, Wei
-Zou, and Zhenkai Liang. <br>
-To appear in <span style="font-style: italic;">the IEEE Symposium on
+Authentication.
+    </span>[<a href="papers/ieee12.pdf">PDF</a><br> 
+Shuaifu Dai, Tao Wei, Chao Zhang, Tielei Wang, Yu Ding,
+    Zhenkai Liang, and Wei Zou. <br>
+In <span style="font-style: italic;">the IEEE Symposium on
 Security and Privacy</span>, San Francisco, CA, May 2012.<br>
   </li>
   <li><span style="font-weight: bold;">Identifying and Analyzing
@@ -314,7 +342,7 @@ public key signed by <a href="http://www.cacert.org">CACert.org</a>
 <p><br>
 </p>
 <hr>
-<address> Last update, 21 March 2012. </address>
+<address> Last update, 11 July 2012. </address>
 <!--  LocalWords:  Liang Zhenkai's Zhenkai AY Malware PDF Brumley Hartwig Heng
  -->
 <!--  LocalWords:  Newsome Pongsin Poosankam Botnet Wenke Dagon Weiqing Sekar
