--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ Security (ESORICS)</span>, Pisa, Italy, September 2012.<br>
   <li><span style="font-weight: bold;">
 Tracking the Trackers: Fast and Scalable Dynamic Analysis of Web Content
 for Privacy Violations.
-    </span> [<a href="papers/acns12.pdf">PDF</a><br> Minh Tran, Xinshu Dong, Zhenkai Liang, and Xuxian
+    </span> [<a href="papers/acns12.pdf">PDF</a>]<br> Minh Tran, Xinshu Dong, Zhenkai Liang, and Xuxian
 Jiang. <br>
 In <span style="font-style: italic;">the 10th International Conference on Applied Cryptography
 and Network Security (ACNS)</span>, Singapore, June 2012.<br>
@@ -126,7 +126,7 @@ and Network Security (ACNS)</span>, Singapore, June 2012.<br>
   <li><span style="font-weight: bold;">A
 Framework to Eliminate Backdoors from Response Computable
 Authentication.
-    </span>[<a href="papers/ieee12.pdf">PDF</a><br> 
+    </span>[<a href="papers/ieee12.pdf">PDF</a>]<br> 
 Shuaifu Dai, Tao Wei, Chao Zhang, Tielei Wang, Yu Ding,
     Zhenkai Liang, and Wei Zou. <br>
 In <span style="font-style: italic;">the IEEE Symposium on
