--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <table>
   <tbody>
     <tr>
-      <td><img src="zliang.jpg" width="300"></td>
+      <td><img src="zliang.jpg" width="300" title="@Tianjin (Yongle Bridge)"></td>
       <td width="10"><br>
       </td>
       <td>
@@ -28,7 +28,7 @@ School of Computing<br>
 National University of Singapore<br>
       <p> Mailing address:<br>
 13 Computing Drive<br>
-Computing 1, #03-68<br>
+Computing 1, #03-27<br>
 Singapore, 117417<br>
       <br>
 Phone: (+65) 6516 1226<br>
