--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <table>
   <tbody>
     <tr>
-      <td><img src="zliang.jpg" height="256" title="@Tianjin (Yongle Bridge)"></td>
+      <td><a href="atpku.jpg"><img src="liangzk.jpg" height="256" title="@PKU"></a></td>
       <td width="10"><br>
       </td>
       <td>
