--- a/index.html
+++ b/index.html
@@ -1,111 +1,117 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+               "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml"
+lang="en" xml:lang="en">
 <head>
-  <meta http-equiv="content-type"
- content="text/html; charset=ISO-8859-1">
-  <title>Liang Zhenkai's Homepage</title>
-  <meta name="description" content="Zhenkai Liang">
-  <meta name="keywords" content="index">
-  <meta name="resource-type" content="document">
-  <meta name="distribution" content="global">
-  <meta http-equiv="Content-Style-Type" content="text/css">
-  <link rel="STYLESHEET" href="index.css" type="text/css">
+<title>Zhenkai's Homepage</title>
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
+<link rel="stylesheet" type="text/css" href="index.css" />
 </head>
-<body style="font-family: sans-serif; color: rgb(0, 0, 0);"
- link="#0000ee" vlink="#551a8b" alink="#ee0000">
-<table>
-  <tbody>
-    <tr>
-      <td><a href="atpku.jpg"><img src="liangzk.jpg" height="256" title="@PKU"></a></td>
-      <td width="10"><br>
-      </td>
-      <td>
-      <h2>LIANG Zhenkai<br>
-      </h2>
+<body>
+
+<style type="text/css">
+#wrap {
+   width:90%;
+   margin:0 auto;
+}
+#left_col {
+   float:left;
+   width:20%;
+}
+#mid_col {
+   float:left;
+   width:80%;
+}
+<!-- #right_col { -->
+<!--    float:left; -->
+<!--    width:25%; -->
+<!-- } -->
+</style>
+
+<div class="banner">
+<h1>Dr. LIANG Zhenkai</h1>
+</div>
+
+<div id="wrap">
+  <div id="left_col">
+    <a href="atpku.jpg"><img src="liangzk.jpg" height="256" title="@PKU"></a>
+
+    <!-- <h2>LIANG Zhenkai</h2> -->
+
 Assistant Professor<br>
 Department of Computer Science<br>
 School of Computing<br>
 National University of Singapore<br>
-      <p> Mailing address:<br>
+
+<p> Mailing address:<br>
 13 Computing Drive<br>
 Computing 1, #03-27<br>
 Singapore, 117417<br>
-      <br>
+<br>
 Phone: (+65) 6516 1226<br>
 Email: <a
  href="http://mailhide.recaptcha.net/d?k=0128BWSz9wFqPEXCT4NSdsqA==&amp;c=m3zKU7zkY4uvqvnMn28OgtARCaJDlbVJ-q8YgDuUH48="
  onclick="window.open('http://mailhide.recaptcha.net/d?k=0128BWSz9wFqPEXCT4NSdsqA==&amp;c=m3zKU7zkY4uvqvnMn28OgtARCaJDlbVJ-q8YgDuUH48=', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;"
  title="Reveal this e-mail address">Click to Reveal</a><br>
 Office: COM1 #03-16<br>
-      </p>
-      </td>
-    </tr>
-  </tbody>
-</table>
-<!--
-  <p>My personal website is <a href="http://www.seclab.cs.stonybrook.edu/%7Ezliang/personal">here</a>.</p>
-  -->
-<h2>Research Interests</h2>
-My research interests include system and software security, web
-security, program
-analysis,&nbsp;
-and software engineering.
-<h2>Teaching</h2>
-<ul>
-  <li>AY 2008/2009 Semester 1: CS3235 Introduction to
-Computer Security</li>
-  <li>AY 2008/2009 Semester 2: CS6230 Topics in
-Information
-Security</li>
-  <li>AY 2009/2010 Semester 1: CS5231 Cryptographic Techniques &amp;
-Data Security</li>
-  <li>AY 2009/2010 Semester 2: CS3235 Introduction to Computer Security<br>
-  </li>
-  <li>AY 2010/2011 Semester 1: CS5231 Systems Security<br>
-  </li>
-  <li>AY 2010/2011 Semester 2: CS3235 Introduction to Computer Security<br>
-  </li>
-  <li>AY 2011/2012 Semester 1: CS4238 Computer Security Practice</li>
-  <li>AY 2011/2012 Semester 2: CS5231 Systems Security</li>
-</ul>
-<h2>Publications</h2>
-<h3>Book Chapters</h3>
-<ol>
-  <li><b>Automatically Identifying Trigger-based Behavior in Malware.</b>
-[<a href="papers/botnet08.pdf">PDF</a>]<br>
-David Brumley, Cody Hartwig, Zhenkai Liang, James Newsome, Pongsin
-Poosankam, Dawn Song, and Heng Yin.<br>
-In <i>Botnet Analysis and Defense</i>, vol. 36 of Advances in
-Information Security Series, Wenke Lee, Cliff Wang, and David Dagon
-(editors), pp. 65-88, Springer, 2008. </li>
-</ol>
-<h3>Journals</h3>
-<ol>
-  <li><span style="font-weight: bold;">DARWIN: An Approach for
-Debugging Evolving Programs.<br>
-    </span>Dawei Qi, Abhik Roychoudhury, Zhenkai Liang, and Kapil
-Vaswani.<br>
-In <span style="font-style: italic;">ACM Transactions on
-Software Engineering and Methodology (TOSEM), Volume 21, Issue 3, 2012.</span></li>
-  <li><b>Alcatraz: An Isolated Environment for Experimenting with
-Untrusted Software</b>. [<a href="papers/tissec09.pdf">PDF</a>]<br>
-Zhenkai Liang, Weiqing Sun, R.Sekar, and V.N. Venkatakrishnan.<br>
-In <span style="font-style: italic;">ACM Transactions on
-Information and System Security (TISSEC), </span>Volume 12, Issue 3,
-January 2009.&nbsp; </li>
-</ol>
-<h3>Conferences</h3>
-<ol>
-  <li><img src="newicon.gif"><span style="font-weight: bold;">
-An Empirical Study of Dangerous Behaviors in Firefox Extensions.<br>
-    </span>Jiangang
-Wang, Xiaohong Li, Xuhui Liu, Xinshu Dong, Junjie Wang, Zhenkai Liang,
-and Zhiyong Feng. <br>
-In <span style="font-style: italic;">the 15th Information Security Conference
-(ISC)</span>, Passau, Germany, September 2012.<br>
-  </li>
+<br>
+<a href="zliang-gpg-pub.asc">Here</a>
+is my <a href="http://www.gnupg.org">GnuPG</a>
+public key signed by <a href="http://www.cacert.org">CACert.org</a>
+<br>
+<b>Key ID</b>: 0xB98FE3FADBC5E7A8<br>
+<b>Fingerprint</b>: 9515 1EE2 0B27 0954 D4F9 0EDC B98F E3FA DBC5 E7A8<br>
+<br>
+<a href="fullseal.jpg"><img src="seal.jpg" alt="108" align="bottom"
+ border="0"></a><img src="cname.jpg" alt="110" align="bottom" border="0">
+</p>
 
-  <li><img src="newicon.gif"><span style="font-weight: bold;">
+
+  <div class="leftsidebar">
+    <div class="box">
+      
+      <h2 style="text-align:center">News</h2>
+      <table cellpadding="2" cellspacing="3" align="center" width="100%">
+	<tbody>
+	  <tr><td>Papers appeared at ASIACCS 2013</td></tr>
+	</tbody>
+      </table>
+    </div>
+  </div>
+
+  </div>
+
+    
+      <!-- MAIN CONTENT STARTS HERE -->
+
+  <div id="mid_col">
+
+    <div class="box" width="80%" >
+      <center>
+	<table cellpadding="4" cellspacing="4" align="center" width="95%">
+	  <tbody>
+	    <tr>
+	      <td width="25%"><a href="index.html" class="navbtn">Home</a></td>
+	      <td width="25%"><a href="publications.html" class="navbtn">Publications</a></td>
+	      <td width="25%"><a href="teaching.html" class="navbtn">Teaching</a></td>
+	      <td width="25%"><a href="research.html" class="navbtn">Research</a></td>
+	    </tr>
+	  </tbody>
+	</table>
+      </center>
+    </div>
+
+    <div  class="outline">
+    <h2> About me </h2>
+    <p>
+      My research interests include system and software security, web
+      security, program analysis,&nbsp; and software engineering.
+    </p>
+  
+    <h2>Selected Publications <a href="publications.html" class="btn">Full List</a></h2>
+
+<ul>
+  <li><span style="font-weight: bold;">
 Codejail: Application-transparent Isolation of Libraries with Tight Program
 Interactions.<br>
     </span> Yongzheng Wu, Sai Sathyanarayan, Roland Yap, and Zhenkai
@@ -113,16 +119,6 @@ Liang. <br>
 In <span style="font-style: italic;">the 17th European Symposium on Research in Computer
 Security (ESORICS)</span>, Pisa, Italy, September 2012.<br>
   </li>
-
-  <li><span style="font-weight: bold;">
-Tracking the Trackers: Fast and Scalable Dynamic Analysis of Web Content
-for Privacy Violations.
-    </span> [<a href="papers/acns12.pdf">PDF</a>]<br> Minh Tran, Xinshu Dong, Zhenkai Liang, and Xuxian
-Jiang. <br>
-In <span style="font-style: italic;">the 10th International Conference on Applied Cryptography
-and Network Security (ACNS)</span>, Singapore, June 2012.<br>
-  </li>
-
   <li><span style="font-weight: bold;">A
 Framework to Eliminate Backdoors from Response Computable
 Authentication.
@@ -152,60 +148,6 @@ Kailas Patil, Xinshu Dong, Xiaolei Li, Zhenkai Liang, and
 Xuxian Jiang.<br>
 In <i>the 31st IEEE International Conference on Distributed Computing
 Systems (ICDCS)</i>, Minneapolis, MN, June 2011.</li>
-  <li><span style="font-weight: bold;">Jump-Oriented Programming: A New
-Class of Code-Reuse Attack. <span style="font-weight: bold;"></span></span>[<a
- href="papers/asiaccs11.pdf">PDF</a>]<span style="font-weight: bold;"><span
- style="font-weight: bold;"></span><br>
-    </span>Tyler Bletsch, Xuxian Jiang, Vince Freeh, and Zhenkai Liang.<br>
-In <i>the 6th ACM Symposium on Information, Computer and
-Communications Security
-(ASIACCS)</i>, Hong Kong, China, March 2011.</li>
-  <li><span style="font-weight: bold;">Heap Taichi: Exploiting Memory
-Allocation Granularity In Heap-spraying Attacks. </span>[<a
- href="papers/acsac10.pdf">PDF</a>]<br>
-Yu Ding, Tao Wei, Tielei Wang, Zhenkai Liang, and Wei Zou.<br>
-In <i>the 25th Annual Computer Security Applications Conference (ACSAC)</i>,
-Austin,
-TX,
-December
-2010.<br>
-  </li>
-  <li><span style="font-weight: bold;">Golden Implementation Driven
-Software Debugging. </span>[<a href="papers/fse10.pdf">PDF</a>]<br>
-Ansuman Banerjee, Abhik Roychoudhury, Johannes A. Harlie, and Zhenkai
-Liang.<br>
-In <i>the ACM SIGSOFT 18th International Symposium on Foundations of
-Software
-Engineering (FSE)</i>, Sata Fe, NM, November 2010.<br>
-  </li>
-  <li> <span style="font-weight: bold;">Test Generation to Expose
-Changes in Evolving Programs. <span style="font-weight: bold;"><span
- style="font-weight: bold;"></span></span></span>[<a
- href="papers/ase10.pdf">PDF</a>]<br>
-Dawei Qi, Abhik Roychoudhury, and Zhenkai Liang.<br>
-In <i>the 25th IEEE/ACM International Conference on Automated Software
-Engineering (ASE)</i>, September 2010.<br>
-  </li>
-  <li><span style="font-weight: bold;">Transparent Protection of
-Commodity OS Kernels using Hardware Virtualization. </span>[<a
- href="papers/securecomm10.pdf">PDF</a>]<br>
-Michael Grace, Zhi Wang, Deepa Srinivasan, Jinku Li, Xuxian Jiang,
-Zhenkai Liang, and Siarhei Liakh.<br>
-In <i>the 6th International ICST Conference on Security and Privacy in
-Communication Networks (SecureComm)</i>, Singapore, September 2010. <br>
-  </li>
-  <li><font color="#800000"><font color="#000000"><strong>Towards
-Generating High Coverage Vulnerability-Based Signatures with
-Protocol-Level Constraint-Guided Exploration. </strong></font></font>[<a
- href="papers/raid09.pdf">PDF</a>]<br>
-    <font color="#800000"><font color="#000000">Juan Caballero, Zhenkai
-Liang, Pongsin Poosankam, and Dawn Song.<br>
-    </font></font>In <i>the </i><font color="#800000"><font
- color="#000000"><span style="font-style: italic;">12th
-International Symposium on Recent Advances in Intrusion Detection</span><span
- class="booktitle"><span style="font-style: italic;"> (RAID)</span>,
-Saint-Malo</span>, France, September 2009.</font></font><br>
-  </li>
   <li><span style="font-weight: bold;">DARWIN: An Approach for
 Debugging Evolving Programs. </span><font color="#800000"><font
  color="#000000"><strong></strong></font></font>[<a
@@ -233,33 +175,6 @@ Conference on
 Information Systems Security<span class="booktitle"> (ICISS),
 Hyderabad, India</span>, December 2008. </font><br>
   </li>
-  <li><b>Expanding Malware Defense by Securing Software Installations</b>.
-[<a href="papers/dimva08.pdf">PDF</a>]<br>
-Weiqing Sun, R. Sekar, Zhenkai Liang, and V.N. Venkatakrishnan.<br>
-In <span style="font-style: italic;">the </span><i>Detection of
-Intrusions, Malware and Vulnerability Analysis
-(DIMVA)</i>, Paris, France, July 2008.</li>
-  <li><span style="font-weight: bold;">AGIS: Automatic Generation of
-Infection Signatures.</span> [<a href="papers/dsn08.pdf">PDF</a>]<br>
-Zhuowei. Li, Xiaofeng. Wang, Zhenkai Liang and Mike. K. Reiter. <br>
-In <i>the </i><span style="font-style: italic;">38th Annual IEEE/IFIP
-International Conference on
-Dependable Systems and Networks (DSN), </span>Anchorage, AK, June
-2008.&nbsp;</li>
-  <li><b>HookFinder: Identifying and Understanding Malware Hooking
-Behaviors</b>. [<a href="papers/ndss08.pdf">PDF</a>]<br>
-Heng Yin, Zhenkai Liang, and Dawn Song.<br>
-In <i>the </i><span style="font-style: italic;">1</span><i>5th Annual
-Network and
-Distributed System Security
-Symposium (NDSS)</i>, San Diego, CA, February 2008. (Acceptance rate:
-17.8%)</li>
-  <li><b>Polyglot: Automatic Extraction of Protocol Message Format
-using Dynamic Binary Analysis</b>. [<a href="papers/ccs07.pdf">PDF</a>]<br>
-Juan Caballero, Heng Yin, Zhenkai Liang, and Dawn Dong.<br>
-In <i>the </i><i>14th ACM Conference on Computer and Communications
-Security
-(CCS)</i>, Alexandria, VA, October 2007. (Acceptance rate: 18%)</li>
   <li><b>Towards Automatic Discovery of Deviations in Binary
 Implementations with Applications to Error Detection and Fingerprint
 Generation</b>. [<a href="papers/sec07.pdf">PDF</a>]<br>
@@ -269,16 +184,6 @@ David Brumley, Juan Caballero, Zhenkai Liang, James Newsome, and Dawn
 Song.<br>
 In <i>the 16th USENIX Security Symposium</i>, Boston, MA, August 2007.
 (Acceptance rate: 12.3%)</li>
-  <li><b>Automatic Generation of Buffer Overflow Attack Signatures: An
-Approach Based on Program Behavior Models</b>. [<a
- href="papers/acsac05.pdf">PDF</a>]<br>
-Zhenkai Liang and R. Sekar.<br>
-In <i>the </i><i>21st Annual Computer Security Applications
-Conference (ACSAC)</i>,
-Tucson,
-AZ,
-December
-2005. (Acceptance rate: 19.6%)</li>
   <li><b>Fast and Automated Generation of Attack Signatures: A Basis
 for Building Self-Protecting Servers</b>. [<a href="papers/ccs05.pdf">PDF</a>]<br>
 Zhenkai Liang and R. Sekar.<br>
@@ -288,21 +193,6 @@ Alexandria,
 VA,
 November
 2005. (Acceptance rate: 15.2%)</li>
-  <li><b>Automatic Synthesis of Filters to Discard Buffer Overflow
-Attacks: A Step Towards Realizing Self-Healing Systems</b>. [<a
- href="papers/usenix05.pdf">PDF</a>]<br>
-Zhenkai Liang, R. Sekar, and Daniel C. DuVarney.<br>
-In <i>the </i><i>USENIX Annual Technical Conference (short paper)</i>,
-Anaheim,
-CA,
-April
-2005.</li>
-  <li><b>One-way Isolation: An Effective Approach for Realizing Safe
-Execution Environments</b>. [<a href="papers/ndss05.pdf">PDF</a>]<br>
-Weiqing Sun, Zhenkai Liang, R.Sekar, and V.N. Venkatakrishnan.<br>
-In <i>the </i><i>12th Annual Network and Distributed System Security
-Symposium
-(NDSS)</i>, San Diego, CA, February 2005. (Acceptance rate: 13%)</li>
   <li><b>Isolated Program Execution: An Application Transparent
 Approach for Executing Untrusted Programs</b>. [<a
  href="papers/acsac03.pdf">PDF</a>]<br>
@@ -315,42 +205,13 @@ Vegas,
 NV,
 December
 2003.</li>
-  <li><b>An approach for Secure Software Installation</b>. [<a
- href="papers/lisa02.pdf">PDF</a>]<br>
-V.N. Venkatakrishnan, R. Sekar, S. Tsipa, T. Kamat, and Z. Liang.<br>
-In <span style="font-style: italic;">the </span><i><span
- style="font-style: italic;"><span style="font-style: italic;"></span></span>16th
-Large
-Installation
-System
-Administration Conference (LISA)</i>,
-Philadelphia,
-PA,
-November
-2002.</li>
-</ol>
-<h2>Contact Information</h2>
-<a href="zliang-gpg-pub.asc">Here</a>
-is my <a href="http://www.gnupg.org">GnuPG</a>
-public key signed by <a href="http://www.cacert.org">CACert.org</a>
-<br>
-<b>Key ID</b>: 0xB98FE3FADBC5E7A8<br>
-<b>Fingerprint</b>: 9515 1EE2 0B27 0954 D4F9 0EDC B98F E3FA DBC5 E7A8<br>
-<br>
-<a href="fullseal.jpg"><img src="seal.jpg" alt="108" align="bottom"
- border="0"></a><img src="cname.jpg" alt="110" align="bottom" border="0">
-<p><br>
-</p>
-<hr>
-<address> Last update, 11 July 2012. </address>
-<!--  LocalWords:  Liang Zhenkai's Zhenkai AY Malware PDF Brumley Hartwig Heng
- -->
-<!--  LocalWords:  Newsome Pongsin Poosankam Botnet Wenke Dagon Weiqing Sekar
- --><!--  LocalWords:  Venkatakrishnan ACM TISSEC th Malo Dawei Qi Abhik Kapil ESEC
- --><!--  LocalWords:  Roychoudhury Vaswani SIGSOFT FSE BitBlaze Jager Gyung Kang
- --><!--  LocalWords:  Prateek Saxena ICISS DIMVA AGIS Zhuowei Xiaofeng Reiter IEEE
- --><!--  LocalWords:  IFIP DSN HookFinder NDSS CCS USENIX ACSAC DuVarney Las Tsipa
- --><!--  LocalWords:  Kamat GnuPG CACert assurer xB FADBC EE EDC DBC
- -->
+</ul>
+
+  </div>
+</div>
+<!-- MAIN CONTENT ENDS HERE -->
+
+</div>
+</div>
 </body>
 </html>
