--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ lang="en" xml:lang="en">
 
 <style type="text/css">
 #wrap {
-   width:90%;
+   width:85%;
    margin:0 auto;
 }
 #left_col {
@@ -19,8 +19,8 @@ lang="en" xml:lang="en">
    width:20%;
 }
 #mid_col {
-   float:left;
-   width:80%;
+   float:right;
+   width:75%;
 }
 <!-- #right_col { -->
 <!--    float:left; -->
