--- a/index.html
+++ b/index.html
@@ -9,32 +9,13 @@ lang="en" xml:lang="en">
 </head>
 <body>
 
-<style type="text/css">
-#wrap {
-   width:85%;
-   margin:0 auto;
-}
-#left_col {
-   float:left;
-   width:20%;
-}
-#mid_col {
-   float:right;
-   width:75%;
-}
-<!-- #right_col { -->
-<!--    float:left; -->
-<!--    width:25%; -->
-<!-- } -->
-</style>
-
 <div class="banner">
 <h1>Dr. LIANG Zhenkai</h1>
 </div>
 
-<div id="wrap">
-  <div id="left_col">
-    <a href="atpku.jpg"><img src="liangzk.jpg" height="256" title="@PKU"></a>
+<div class="wrap">
+  <div class="left_col">
+    <img src="liangzk.jpg" width="100%" title="@PKU">
 
     <!-- <h2>LIANG Zhenkai</h2> -->
 
@@ -84,9 +65,9 @@ public key signed by <a href="http://www.cacert.org">CACert.org</a>
     
       <!-- MAIN CONTENT STARTS HERE -->
 
-  <div id="mid_col">
+  <div class="mid_col">
 
-    <div class="box" width="80%" >
+    <div class="box">
       <center>
 	<table cellpadding="4" cellspacing="4" align="center" width="95%">
 	  <tbody>
