--- a/research.html
+++ b/research.html
@@ -9,32 +9,13 @@ lang="en" xml:lang="en">
 </head>
 <body>
 
-<style type="text/css">
-#wrap {
-   width:85%;
-   margin:0 auto;
-}
-#left_col {
-   float:left;
-   width:20%;
-}
-#mid_col {
-   float:right;
-   width:75%;
-}
-<!-- #right_col { -->
-<!--    float:left; -->
-<!--    width:25%; -->
-<!-- } -->
-</style>
-
 <div class="banner">
 <h1>Dr. LIANG Zhenkai</h1>
 </div>
 
-<div id="wrap">
-  <div id="left_col">
-    <a href="atpku.jpg"><img src="liangzk.jpg" height="256" title="@PKU"></a>
+<div class="wrap">
+  <div class="left_col">
+    <img src="liangzk.jpg" width="100%" title="@PKU">
 
     <!-- <h2>LIANG Zhenkai</h2> -->
 
@@ -49,7 +30,7 @@ National University of Singapore<br>
       <!-- MAIN CONTENT STARTS HERE -->
 
 
-  <div id="mid_col">
+  <div class="mid_col">
 
 <div class="box" width="80%" >
   <center>
