--- a/publications.html
+++ b/publications.html
@@ -39,8 +39,8 @@ National University of Singapore<br>
 	    <tr>
 	      <td width="25%"><a href="index.html" class="navbtn">Home</a></td>
 	      <td width="25%"><a href="publications.html" class="navbtn">Publications</a></td>
-	      <td width="25%"><a href="teaching.html" class="navbtn">Teaching</a></td>
 	      <td width="25%"><a href="research.html" class="navbtn">Research</a></td>
+      <td width="25%"><a href="teaching.html" class="navbtn">Teaching</a></td>
 	    </tr>
 	  </tbody>
 	</table>
@@ -77,8 +77,25 @@ January 2009.&nbsp; </li>
 </ol>
 <h3>Conferences</h3>
 <ol>
-  <li><img src="newicon.gif"><span style="font-weight: bold;">
-An Empirical Study of Dangerous Behaviors in Firefox Extensions.<br>
+  <li><span style="font-weight: bold;">A Comprehensive Client-side
+      Behavior Model for Diagnosing Attacks in Ajax
+      Applications. </span>
+    Xinshu Dong, Kailas Patil, Jian Mao, and Zhenkai Liang. 
+    In <span style="font-style: italic;">the 18th International
+      Conference on Engineering of Complex Computer Systems
+      (ICECCS)</span>, Singapore, July 2013. 
+  </li>
+  <li><span style="font-weight: bold;"> 
+  Enforcing System-Wide Control Flow Integrity for Exploit Detection
+  and Diagnosis </span>
+  Aravind Prakash, Heng Yin and Zhenkai Liang. <br>
+  In <span style="font-style: italic;"> the 8th ACM Symposium on
+  Information, Computer and Communications Security (ASIACCS)</span>,
+  Hangzhou, China, May 2013. <br>
+  </li>
+
+  <li><span style="font-weight: bold;">
+An Empirical Study of Dangerous Behaviors in Firefox Extensions.[<a href="papers/isc12.pdf">PDF</a>]<br>
     </span>Jiangang
 Wang, Xiaohong Li, Xuhui Liu, Xinshu Dong, Junjie Wang, Zhenkai Liang,
 and Zhiyong Feng. <br>
@@ -86,9 +103,9 @@ In <span style="font-style: italic;">the 15th Information Security Conference
 (ISC)</span>, Passau, Germany, September 2012.<br>
   </li>
 
-  <li><img src="newicon.gif"><span style="font-weight: bold;">
+  <li><span style="font-weight: bold;">
 Codejail: Application-transparent Isolation of Libraries with Tight Program
-Interactions.<br>
+Interactions.[<a href="papers/esorics12.pdf">PDF</a>]<br>
     </span> Yongzheng Wu, Sai Sathyanarayan, Roland Yap, and Zhenkai
 Liang. <br>
 In <span style="font-style: italic;">the 17th European Symposium on Research in Computer
