--- a/index.html
+++ b/index.html
@@ -49,14 +49,13 @@ public key signed by <a href="http://www.cacert.org">CACert.org</a>
 
 
   <div class="leftsidebar">
-    <div class="box">
+    <div class="box" width="90%">
       
       <h2 style="text-align:center">News</h2>
-      <table cellpadding="2" cellspacing="3" align="center" width="100%">
-	<tbody>
-	  <tr><td>Papers appeared at ASIACCS 2013</td></tr>
-	</tbody>
-      </table>
+	<ul>
+	<li>Papers appeared at ICECCS 2013.</li>
+	<li>Papers appeared at ASIACCS 2013.</li>
+	</ul>
     </div>
   </div>
 
