--- a/publications.html
+++ b/publications.html
@@ -95,8 +95,8 @@ January 2009.&nbsp; </li>
   </li>
 
   <li><span style="font-weight: bold;">
-An Empirical Study of Dangerous Behaviors in Firefox Extensions.[<a href="papers/isc12.pdf">PDF</a>]<br>
-    </span>Jiangang
+An Empirical Study of Dangerous Behaviors in Firefox Extensions.[<a href="papers/isc12.pdf">PDF</a>]</span><br>
+    Jiangang
 Wang, Xiaohong Li, Xuhui Liu, Xinshu Dong, Junjie Wang, Zhenkai Liang,
 and Zhiyong Feng. <br>
 In <span style="font-style: italic;">the 15th Information Security Conference
@@ -105,8 +105,8 @@ In <span style="font-style: italic;">the 15th Information Security Conference
 
   <li><span style="font-weight: bold;">
 Codejail: Application-transparent Isolation of Libraries with Tight Program
-Interactions.[<a href="papers/esorics12.pdf">PDF</a>]<br>
-    </span> Yongzheng Wu, Sai Sathyanarayan, Roland Yap, and Zhenkai
+Interactions.</span>[<a href="papers/esorics12.pdf">PDF</a>]<br>
+    Yongzheng Wu, Sai Sathyanarayan, Roland Yap, and Zhenkai
 Liang. <br>
 In <span style="font-style: italic;">the 17th European Symposium on Research in Computer
 Security (ESORICS)</span>, Pisa, Italy, September 2012.<br>
