--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@ public key signed by <a href="http://www.cacert.org">CACert.org</a>
 <ul>
   <li><span style="font-weight: bold;">
 Codejail: Application-transparent Isolation of Libraries with Tight Program
-Interactions.<br>
-    </span> Yongzheng Wu, Sai Sathyanarayan, Roland Yap, and Zhenkai
+Interactions.</span>[<a href="papers/esorics12.pdf">PDF</a>]<br>
+    Yongzheng Wu, Sai Sathyanarayan, Roland Yap, and Zhenkai
 Liang. <br>
 In <span style="font-style: italic;">the 17th European Symposium on Research in Computer
 Security (ESORICS)</span>, Pisa, Italy, September 2012.<br>
