--- a/publications.html
+++ b/publications.html
@@ -63,8 +63,8 @@ Information Security Series, Wenke Lee, Cliff Wang, and David Dagon
 <h3>Journals</h3>
 <ol>
   <li><span style="font-weight: bold;">DARWIN: An Approach for
-Debugging Evolving Programs.<br>
-    </span>Dawei Qi, Abhik Roychoudhury, Zhenkai Liang, and Kapil
+Debugging Evolving Programs.</span>[<a href="papers/tosem12.pdf">PDF</a>]<br>
+    Dawei Qi, Abhik Roychoudhury, Zhenkai Liang, and Kapil
 Vaswani.<br>
 In <span style="font-style: italic;">ACM Transactions on
 Software Engineering and Methodology (TOSEM), Volume 21, Issue 3, 2012.</span></li>
@@ -95,7 +95,7 @@ January 2009.&nbsp; </li>
   </li>
 
   <li><span style="font-weight: bold;">
-An Empirical Study of Dangerous Behaviors in Firefox Extensions.[<a href="papers/isc12.pdf">PDF</a>]</span><br>
+An Empirical Study of Dangerous Behaviors in Firefox Extensions.</span>[<a href="papers/isc12.pdf">PDF</a>]<br>
     Jiangang
 Wang, Xiaohong Li, Xuhui Liu, Xinshu Dong, Junjie Wang, Zhenkai Liang,
 and Zhiyong Feng. <br>
