--- a/index.html
+++ b/index.html
@@ -19,10 +19,6 @@ lang="en" xml:lang="en">
 
     <!-- <h2>LIANG Zhenkai</h2> -->
 
-Assistant Professor<br>
-Department of Computer Science<br>
-School of Computing<br>
-National University of Singapore<br>
 
 <p> Mailing address:<br>
 13 Computing Drive<br>
@@ -82,10 +78,13 @@ public key signed by <a href="http://www.cacert.org">CACert.org</a>
     </div>
 
     <div  class="outline">
-    <h2> About me </h2>
     <p>
-      My research interests include system and software security, web
-      security, program analysis,&nbsp; and software engineering.
+	I'm an assistant professor of School of Computing, National 
+	University of Singapore. 
+
+      	My research interests include system security, web
+      	security, mobile security, program analysis, and 
+        software debugging and testing.
     </p>
   
     <h2>Selected Publications <a href="publications.html" class="btn">Full List</a></h2>
@@ -132,7 +131,7 @@ Systems (ICDCS)</i>, Minneapolis, MN, June 2011.</li>
 Debugging Evolving Programs. </span><font color="#800000"><font
  color="#000000"><strong></strong></font></font>[<a
  href="papers/fse09.pdf">PDF</a>]<br>
-    <b style="color: rgb(255, 0, 0);">(Distinguished
+    <b style="color: #A30000">(Distinguished
 paper award)<br>
     </b>Dawei Qi,
 Abhik Roychoudhury,
@@ -158,7 +157,7 @@ Hyderabad, India</span>, December 2008. </font><br>
   <li><b>Towards Automatic Discovery of Deviations in Binary
 Implementations with Applications to Error Detection and Fingerprint
 Generation</b>. [<a href="papers/sec07.pdf">PDF</a>]<br>
-    <b style="color: rgb(255, 0, 0);">(Best
+    <b style="color: #A30000">(Best
 paper award)</b><br>
 David Brumley, Juan Caballero, Zhenkai Liang, James Newsome, and Dawn
 Song.<br>
@@ -176,7 +175,7 @@ November
   <li><b>Isolated Program Execution: An Application Transparent
 Approach for Executing Untrusted Programs</b>. [<a
  href="papers/acsac03.pdf">PDF</a>]<br>
-    <b style="color: rgb(255, 0, 0);">(Outstanding
+    <b style="color: #A30000">(Outstanding
 paper award)</b><br>
 Zhenkai Liang, V.N. Venkatakrishnan, and R. Sekar.<br>
 In <i>the 19th Annual Computer Security Applications Conference (ACSAC)</i>,
