--- a/research.html
+++ b/research.html
@@ -39,8 +39,8 @@ National University of Singapore<br>
     <tr>
       <td width="25%"><a href="index.html" class="navbtn">Home</a></td>
       <td width="25%"><a href="publications.html" class="navbtn">Publications</a></td>
-      <td width="25%"><a href="teaching.html" class="navbtn">Teaching</a></td>
       <td width="25%"><a href="research.html" class="navbtn">Research</a></td>
+      <td width="25%"><a href="teaching.html" class="navbtn">Teaching</a></td>
     </tr>
 </tbody>
 </table>
@@ -50,8 +50,17 @@ National University of Singapore<br>
 
     <div  class="outline">
 
-<h2>Research Projects</h2>
+<h2>Research Directions</h2>
+<ul>
+  <li>System and Software Security</li>
+  <li>Web Security</li>
+  <li>Mobile Security</li>
+  <li>Software Debugging and Testing</li>
+</ul>
 
+<h2>Current Students</h2>
+
+<h2>Graduated Students</h2>
   </div>
 </div>
 <!-- MAIN CONTENT ENDS HERE -->
